--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>User:</strong>
-  <%= @album.user_id %>
+  <strong>Image:</strong>
+  <%= image_tag @album.photo.variant(resize_to_limit: [300, 300]) %>
 </p>
 
 <%= link_to 'Edit', edit_album_path(@album) %> |
