--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -6,7 +6,6 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,7 +14,7 @@
     <% @albums.each do |album| %>
       <tr>
         <td><%= album.name %></td>
-        <td><%= album.user_id %></td>
+        <td><%= image_tag album.photo.variant(resize_to_limit: [100, 100]) %></td>
         <td><%= link_to 'Show', album %></td>
         <td><%= link_to 'Edit', edit_album_path(album) %></td>
         <td><%= link_to 'Destroy', album, method: :delete, data: { confirm: 'Are you sure?' } %></td>
