--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<%# <h1>Pages#home</h1>
+<p>Find me in app/views/pages/home.html.erb</p> %>
 
-<%= javascript_pack_tag "hello_react" %>
+<%# <%= javascript_pack_tag "album_react" %> 
+<%= react_component("Main") %>
