--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -4,25 +4,23 @@
       <h1>Images</h1>
       <%= link_to 'New image', new_album_path, class:"btn btn-primary my-3" %>
       <div class="row row-cols-3">
-          <% @albums.each do |album| %>
-            <div class="col">
-              <div class="card my-3">
-                <%= image_tag album.photo.variant(resize_to_limit: [100, 100]), class:"card-img-top" %>
-                <div class="card-body">
-                  <h5 class="card-title"><%= album.name %></h5>
-                </div>
-                <div class="card-footer">
-                  <small class="text-muted">
-                    <%= link_to 'Show', album %> | 
-                    <%= link_to 'Edit', edit_album_path(album) %> | 
-                    <%= link_to 'Destroy', album, method: :delete, data: { confirm: 'Are you sure?' } %>
-                  </small>
-                </div>
+        <% @albums.each do |album| %>
+          <div class="col">
+            <div class="card my-3">
+              <%= image_tag album.photo.variant(resize_to_limit: [250, 250]), class:"card-img-top", height: "250px" %>
+              
+              <div class="card-footer">
+                <small class="text-muted">
+                  <%= link_to 'Show', album %> | 
+                  <%= link_to 'Edit', edit_album_path(album) %> | 
+                  <%= link_to 'Destroy', album, method: :delete, data: { confirm: 'Are you sure?' } %>
+                </small>
               </div>
             </div>
-          <% end %>
-        </div>
+          </div>
+        <% end %>
       </div>
     </div>
+  </div>
 </div>
 
