--- a/app/views/albums/new.html.erb
+++ b/app/views/albums/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Album</h1>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-lg-9">
+        <h1>New Album</h1>
 
-<%= render 'form', album: @album %>
+        <%= render 'form', album: @album %>
 
-<%= link_to 'Back', albums_path %>
+        <%= link_to 'Back', albums_path %>
+    </div>
+  </div>
+</div>
