--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -7,7 +7,7 @@
         <% @albums.each do |album| %>
           <div class="col">
             <div class="card my-3">
-              <%= image_tag album.photo.variant(resize_to_limit: [100, 100]), class:"card-img-top", height: "150px" %>
+              <%= image_tag album.photo.variant(resize_to_limit: [100, 100]), class:"card-img-top card-imgz" %>
               
               <div class="card-footer">
                 <small class="text-muted">
