--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -3,7 +3,7 @@
     <div class="col-lg-9">
       <h1>Images</h1>
       <%= link_to 'New image', new_album_path, class:"btn btn-primary my-3" %>
-      <div class="row row-cols-3">
+      <div class="row row-cols-lg-3 row-cols-xs-1">
         <% @albums.each do |album| %>
           <div class="col">
             <div class="card my-3">
